tests/natural_inference_object/enforced.js
const foo = {};
foo as {bar?: string}; // error
